@@ -1,3 +1,7 @@
+2023-06-16 Dusan Jocic <dusanjocic@msn>
+	* [SoundSystem] Returns false if the sound wasn't freed
+	* [Engine] Fixed rare 'bad command byte' error after executing a client command
+
 2023-05-28 Dusan Jocic <dusanjocic@msn.com>
 	* [Engine] Rewrote va function
 	* [RendererSystem] Added support for the geometry shaders
